--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -35,10 +35,18 @@
         </li>
 
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+     <ul class="navbar-nav  mb-2 mb-lg-0 float-end">
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <span th:text="${#authentication.name}"></span>
+         </a>
+         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+           <li><a class="dropdown-item" >LogOut</a></li>
+           <li><a class="dropdown-item">Profil</a></li>
+         </ul>
+       </li>
+       <li></li>
+     </ul>
     </div>
   </div>
 </nav>
