--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -41,7 +41,11 @@
           <span th:text="${#authentication.name}"></span>
          </a>
          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <li><a class="dropdown-item" >LogOut</a></li>
+           <li>
+             <form method="post" th:action="@{/logout}">
+                <button class="dropdown-item" type="submit">Logout</button>
+             </form>
+
            <li><a class="dropdown-item">Profil</a></li>
          </ul>
        </li>
